Correct abstract title on narrow screens.

--- a/css/caarms.scss
+++ b/css/caarms.scss
@@ -164,6 +164,9 @@ font-size: 2em;
 	}
 	.views-field-field-session-title{
 		width: 70%;
+		@media (max-width: $breakpoint) {
+			width: 100%;
+		}
 	}
 }
 
